Fixed some spacing problems between the final logo and menu toggle. Implemented the responsive navigation menu to all the html pages except the product-details pages, which are not yet responsive. And also implemented the filter toggle for the shopping pages.

--- a/Tabs_N_Blanks/css/breadcrumb.css
+++ b/Tabs_N_Blanks/css/breadcrumb.css
@@ -35,7 +35,7 @@ box-sizing: border-box;
 		background: #F2EDE7;
 		list-style: none; 
 		overflow: hidden; 
-		margin-top: 0.7em;
+		margin-top: 0.6em;
 	    padding-left: 4em;
 	}
 
